RESOLVED FIXED33308
AX: CSS content not returned correctly in AX
https://bugs.webkit.org/show_bug.cgi?id=33308
Summary AX: CSS content not returned correctly in AX
chris fleizach
Reported 2010-01-06 22:35:44 PST
for some reason when the content tag is used weirdness ensues http://www.kloots.net/sandbox/css-text.html
Attachments
patch (5.32 KB, patch)
2010-01-06 22:52 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-01-06 22:52:14 PST
WebKit Review Bot
Comment 2 2010-01-06 22:57:06 PST
style-queue ran check-webkit-style on attachment 46024 [details] without any errors.
chris fleizach
Comment 3 2010-01-08 12:31:45 PST
Note You need to log in before you can comment on or make changes to this bug.