AX: CSS content not returned correctly in AX https://bugs.webkit.org/show_bug.cgi?id=33308

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/css-content-attribute.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement):

LayoutTests:

* platform/mac/accessibility/css-content-attribute-expected.txt: Added.
* platform/mac/accessibility/css-content-attribute.html: Added.



Canonical link: https://commits.webkit.org/44412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53000 268f45cc-cd09-0410-ab3c-d52691b4dbfc